k8s/koiner/base/sync/koiner-chain-sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koiner-chain-sync
  name: koiner-chain-sync
  namespace: koiner-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koiner-chain-sync
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: koiner-chain-sync
    spec:
      containers:
        - name: koiner-chain-sync
          image: elimbatido/koiner-chain-sync:v0.2.27
          ports:
            - containerPort: 3101
          readinessProbe:
            tcpSocket:
              port: 3101
            initialDelaySeconds: 5
            periodSeconds: 5
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 3101
          imagePullPolicy: Always
      serviceAccountName: default
