k8s/koiner/base/sync/koiner-tokenize-sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koiner-tokenize-sync
  name: koiner-tokenize-sync
  namespace: koiner-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koiner-tokenize-sync
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: koiner-tokenize-sync
    spec:
      containers:
        - name: koiner-tokenize-sync
          image: elimbatido/koiner-tokenize-sync:v0.2.16
          ports:
            - containerPort: 3104
          readinessProbe:
            tcpSocket:
              port: 3104
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3104
          imagePullPolicy: Always
      serviceAccountName: default
