k8s/koiner/base/sync/koiner-contracts-sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koiner-contracts-sync
  name: koiner-contracts-sync
  namespace: koiner-sync
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3102
  selector:
    service: koiner-contracts-sync
