k8s/koiner/base/sync/koiner-network-sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koiner-network-sync
  name: koiner-network-sync
  namespace: koiner-sync
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3103
  selector:
    service: koiner-network-sync
